src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  background-color: #0d0030;
  scrollbar-color: #fed823 transparent;
  scrollbar-width: thin;
}
body {
  scroll-behavior: smooth;
  margin: 0;
  min-height: 100vh;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: 'JetBrains Mono', monospace;
  color: #efecd6;
  /* Grid */
  background: conic-gradient(
      from 90deg at 0.06rem 0.06rem,
      #0d0030 90deg,
      #1a0259 0
    )
    0 0/3rem 3rem;
}

::selection {
  background: #ff7bed35;
}
::-moz-selection {
  background: #ff7bed35;
}

/* Add hyphens to the text block */
.hyphensAuto {
  hyphens: auto;
  line-height: initial;
}
/* Grid for mobiles */
@media screen and (max-width: 600px) {
  body {
    background: conic-gradient(
        from 90deg at 0.06rem 0.06rem,
        #0d0030 90deg,
        #1a0259 0
      )
      0 0/2rem 2rem;
  }
}

/* Scrollbar */
::-webkit-scrollbar {
  width: 25px;
}
::-webkit-scrollbar-track {
  background: linear-gradient(
    90deg,
    rgba(0, 0, 0, 0) 47%,
    #fed823 47%,
    #fed823 51%,
    rgba(0, 0, 0, 0) 52%
  );
}
::-webkit-scrollbar-thumb {
  background: #fed823;
  border-radius: 20px;
  background-clip: content-box;
  border: 8px solid transparent;
}
::-webkit-scrollbar-thumb:hover {
  background: #fed950;
  border-radius: 20px;
  background-clip: content-box;
  border: 7.5px solid transparent;
}

@keyframes tertiarySphereAnimation {
  20% {
    /* Animation starts after 20% of page is scrolled */
    transform: translate(0rem, 0rem);
  }
  40% {
    /* Orb before SuperOrb */
    transform: translate(0rem, 44.688rem);
  }
  50% {
    /* Orb going into SuperOrb */
    transform: translate(4.7rem, 44.688rem);
  }
  60% {
    /* Orb before fork */
    transform: translate(4.7rem, 67.5rem);
  }
  64% {
    /* Orb to the ID Card */
    transform: translate(-0.63rem, 73.75rem);
    opacity: 1;
  }
  65% {
    /* Orb goes and stays behind ID card */
    /* Reveal animation happens inside IdentityCard */
    transform: translate(-0.563rem, 86.438rem);
    opacity: 0;
  }
  100% {
    /* Stay behing the card always*/
    transform: translate(-0.563rem, 86.438rem);
    opacity: 0;
  }
}
@keyframes accentSphereAnimation {
  20% {
    transform: translate(0rem, 0rem);
  }
  40% {
    transform: translate(0rem, 45.313rem);
  }
  50% {
    transform: translate(0rem, 45.313rem);
  }
  60% {
    transform: translate(0rem, 70rem);
  }
  64% {
    transform: translate(-5.313rem, 75.625rem);
    opacity: 1;
  }
  65% {
    transform: translate(-5.313rem, 88.438rem);
    opacity: 0;
  }
  100% {
    transform: translate(-5.313rem, 88.438rem);
    opacity: 0;
  }
}
@keyframes secondarySphereAnimation {
  20% {
    transform: translate(0rem, 0rem);
  }
  40% {
    transform: translate(0rem, 44.063rem);
  }
  50% {
    transform: translate(-4.7rem, 44.063rem);
  }
  60% {
    transform: translate(-4.7rem, 67.5rem);
  }
  64% {
    transform: translate(0rem, 72.5rem);
    opacity: 1;
  }
  65% {
    transform: translate(0.375rem, 85.625rem);
    opacity: 0;
  }
  100% {
    transform: translate(0.375rem, 85.625rem);
    opacity: 0;
  }
}

.custom-scrollbar-thumb {
  position: absolute;
  left: 1.5px;
  background: #fed823;
  width: 0.5rem;
  border-radius: 10rem;
  filter: drop-shadow(0rem 0rem 0.625rem #fed823);
  z-index: 20;
  transition: all;
}
.custom-scrollbar-body {
  position: absolute;
  top: 0;
  right: 0;
  width: 0.5rem;
  height: 100%;
  /* Creates background with less than thumb width */
  background: url('/img/scrollbarBg.png');
}
.custom-qr-code canvas {
  max-width: 8.75rem;
}

/* Wallet select menu for dark and light theme */
.web3modal-modal-lightbox {
  z-index: 100 !important;
}

